--- a/shop/pages/templates/pages/home.html
+++ b/shop/pages/templates/pages/home.html
@@ -86,7 +86,7 @@
                     <a href="" class="shop-item__link shop-item__link--title">
                         <h4 class="shop-item__title">Футболка USA</h4>
                     </a>
-                    <p class="shop-item__price"> <span class="standard_price">$229</span> <span class="sale_price">$129</span></p>
+                    <p class="shop-item__price sale-active"> <span class="standard_price">$229</span> <span class="sale_price">$129</span></p>
                 </div>
                 <div class="col-4 shop-item">
                     <div class="shop-item__image-container">
@@ -98,7 +98,7 @@
                     <a href="" class="shop-item__link shop-item__link--title">
                         <h4 class="shop-item__title">Купальник Glow</h4>
                     </a>
-                    <p class="shop-item__price"> <span class="standard_price">$129</span> <span class="sale_price">$129</span></p>
+                    <p class="shop-item__price sale-active"> <span class="standard_price">$129</span> <span class="sale_price">$129</span></p>
                 </div>
                 <div class="col-4 shop-item">
                     <div class="shop-item__image-container">
@@ -110,7 +110,7 @@
                     <a href="" class="shop-item__link shop-item__link--title">
                         <h4 class="shop-item__title">Свитшот Sweet Shot</h4>
                     </a>
-                    <p class="shop-item__price"> <span class="standard_price">$129</span> <span class="sale_price">$129</span></p>
+                    <p class="shop-item__price sale-active"> <span class="standard_price">$129</span> <span class="sale_price">$129</span></p>
                 </div>     
              
             </div>
