--- a/shop/catalog/templates/catalog/product_detail.html
+++ b/shop/catalog/templates/catalog/product_detail.html
@@ -30,11 +30,15 @@
         <div class="row">
 
             <div class="col-6 product-card__image-container">
-                {% thumbnail variant.image "530x725" crop="center" as im %}
-                <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}"
-                     alt="{{ product.name }}"
-                     class="product-card__image">
-                {% endthumbnail %}
+                {% if variant.image %}
+                    {% thumbnail variant.image "530x725" crop="center" as im %}
+                    <img src="{{ im.url }}" width="{{ im.width }}" height="{{ im.height }}"
+                        alt="{{ product.name }}"
+                        class="product-card__image">
+                    {% endthumbnail %}
+                {% else %}
+                    
+                {% endif %}
             </div>
             <div class="col-6 product-card__info">
                 <p class="shop-item__price product-card__price">
