--- a/shop/catalog/templates/catalog/catalog.html
+++ b/shop/catalog/templates/catalog/catalog.html
@@ -34,7 +34,7 @@
             </p>
             <div class="row shop-items">
                 {% for product in page_obj %}
-                {% with product_variant=product.variants.first %}
+                {% with product_variant=product.first_variant_list.0 %}
                 <div class="col-4 shop-item">
                     <div class="shop-item__image-container">
                         <a href="{% url 'catalog:product_detail' product.slug %}" class="shop-item__link shop-item__link--image">
