--- a/shop/templates/includes/header.html
+++ b/shop/templates/includes/header.html
@@ -73,7 +73,7 @@
                 </div>
 
                     <a href="tel:+74958235412" class="phone-link ms-2">+7 (495) 823-54-12</a>
-                    <a href="cart.html" class="cart-link ms-5">
+                    <a href="{% url 'cart:cart_detail' %}" class="cart-link ms-5">
                         <img src="{% static 'img/cart.svg' %}" alt="Cart" class="cart-icon">
                     </a>
                 </div>
