--- a/shop/orders/templates/orders/checkout.html
+++ b/shop/orders/templates/orders/checkout.html
@@ -20,108 +20,113 @@
 
 <section class="section order">
     <div class="container">
-        <div class="row">
-            <div class="col-4">
-                <h3 class="order__user-data-title">
-                    Данные покупателя
-                </h3>
-                <form class="order__user-data form">
-                    <div class="form-field">
-                        <input type="text" name="name" class="form-input" placeholder=" " required>
-                        <label class="form-label">Имя</label>
-                    </div>
-                    <div class="form-field">
-                        <input type="email" name="email" class="form-input" placeholder=" " required>
-                        <label class="form-label">Email</label>
-                    </div>
-                    <div class="form-field">
-                        <input type="tel" name="phone" class="form-input" placeholder=" " title="+7 (999) 123-45-67" required>
-                        <label class="form-label">Телефон</label>
-                    </div>
-                </form>
-            </div>
-            <div class="offset-3 col-3">
-                <h3 class="order__info-title">
-                    Ваш заказ
-                </h3>
-                <div class="order__info-block order__info-subtitles-block">
-                    <h4 class="order__info-subtitle">Товар</h4>
-                    <h4 class="order__info-subtitle">Всего</h4>
-                </div>
-                <div class="order__info-block order__info-product">
-                    <p class="order__info-text">Футболка USA</p>
-                    <p class="order__info-product-text">$129</p>
-                </div>
-                <div class="order__info-block order__presummary">
-                    <p class="order__info-text">Предытог</p>
-                    <p class="order__info-text">$129</p>
-                </div>
-                <div class="order__info-block order__summary summary">
-                    <p class="order__info-summary-text summary__text"><span class="order__info-summary-span summary__span">Итого:</span> <span class="order__info-summary-span summary__sum">$129</span></p>
-                </div>
-            </div>
-        </div>
-        <div class="row order__address-and-payment">
-            <div class="col-4">
-                <div class="order__user-address">
-                    <h3 class="order__user-address-title">
-                        Адрес доставки
+        <form action="" method="post">
+            {% csrf_token %}
+            <div class="row">
+                <div class="col-4">
+                    <h3 class="order__user-data-title">
+                        Данные покупателя
                     </h3>
-                    <form class="order__user-address-form form">
+                    <div class="order__user-data form">
                         <div class="form-field">
-                            <input type="text" name="address" class="form-input" placeholder=" " required>
-                            <label class="form-label">Страна</label>
+                            <input type="text" name="name" class="form-input" placeholder=" " required>
+                            <label class="form-label">Имя</label>
                         </div>
                         <div class="form-field">
-                            <input type="text" name="city" class="form-input" placeholder=" " required>
-                            <label class="form-label">Город</label>
+                            <input type="email" name="email" class="form-input" placeholder=" " required>
+                            <label class="form-label">Email</label>
                         </div>
                         <div class="form-field">
-                            <input type="text" name="street" class="form-input" placeholder=" " required>
-                            <label class="form-label">Улица</label>
+                            <input type="tel" name="phone" class="form-input" placeholder=" " title="+7 (999) 123-45-67" required>
+                            <label class="form-label">Телефон</label>
                         </div>
-                        <div class="form-field">
-                            <input type="text" name="house" class="form-input" placeholder=" " required>
-                            <label class="form-label">Дом</label>
-                        </div>
-                        <div class="form-field">
-                            <input type="text" name="apartment" class="form-input" placeholder=" ">
-                            <label class="form-label">Квартира</label>
-                        </div>      
-                
-                    </form>
+                    </div>
                 </div>
-            </div>
-            <div class="col-3 offset-3">
-                <div class="order__payment-method">
-                    <h3 class="order__payment-method-title">
-                        Способы оплаты
+                <div class="offset-3 col-3">
+                    <h3 class="order__info-title">
+                        Ваш заказ
                     </h3>
-                    <form class="order__payment-method-form">
-                    <label class="radio-label">
-                        <input type="radio" name="payment" value="card" checked>
-                        <span class="radio-text">Оплата картой</span>
-                    </label>
-
-                    <label class="radio-label">
-                        <input type="radio" name="payment" value="cash">
-                        <span class="radio-text">Оплата наличными</span>
-                    </label>
-                    </form>
-                    <a href="confirm-order.html" class="btn shop-button order__payment-method-btn">Разместить заказ</a>
+                    <div class="order__info-block order__info-subtitles-block">
+                        <h4 class="order__info-subtitle">Товар</h4>
+                        <h4 class="order__info-subtitle">Всего</h4>
+                    </div>
+                    {% for item in cart %}
+                        <div class="order__info-block order__info-product">
+                            <p class="order__info-text">{{ item.product.product.name }} x {{ item.quantity }}</p>
+                            <p class="order__info-product-text">${{ item.product.price }}</p>
+                        </div>
+                        <div class="order__info-block order__presummary">
+                            <p class="order__info-text">Предытог</p>
+                            <p class="order__info-text">${{ item.total_price }}</p>
+                        </div>
+                    {% endfor %}
+                    <div class="order__info-block order__summary summary">
+                        <p class="order__info-summary-text summary__text"><span class="order__info-summary-span summary__span">Итого:</span> <span class="order__info-summary-span summary__sum">{{cart.get_total_price}}</span></p>
+                    </div>
                 </div>
             </div>
+            <div class="row order__address-and-payment">
+                <div class="col-4">
+                    <div class="order__user-address">
+                        <h3 class="order__user-address-title">
+                            Адрес доставки
+                        </h3>
+                        <div class="order__user-address-form form">
+                            <div class="form-field">
+                                <input type="text" name="country" class="form-input" placeholder=" " required>
+                                <label class="form-label">Страна</label>
+                            </div>
+                            <div class="form-field">
+                                <input type="text" name="city" class="form-input" placeholder=" " required>
+                                <label class="form-label">Город</label>
+                            </div>
+                            <div class="form-field">
+                                <input type="text" name="street" class="form-input" placeholder=" " required>
+                                <label class="form-label">Улица</label>
+                            </div>
+                            <div class="form-field">
+                                <input type="text" name="house" class="form-input" placeholder=" " required>
+                                <label class="form-label">Дом</label>
+                            </div>
+                            <div class="form-field">
+                                <input type="text" name="apartment" class="form-input" placeholder=" ">
+                                <label class="form-label">Квартира</label>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3 offset-3">
+                    <div class="order__payment-method">
+                        <h3 class="order__payment-method-title">
+                            Способы оплаты
+                        </h3>
+                        <div class="order__payment-method-form">
+                        <label class="radio-label">
+                            <input type="radio" name="payment_method" value="card" checked>
+                            <span class="radio-text">Оплата картой</span>
+                        </label>
 
-            <div class="col-4 order__comment">
-                <h3 class="order__comment-title">
-                    Комментарии
-                </h3>
-                <div class="form-field order__comment-field">
-                    <textarea name="message" class="form-input" placeholder=" " required></textarea>
-                    <label class="form-label">Комментарий</label>
+                        <label class="radio-label">
+                            <input type="radio" name="payment_method" value="cash">
+                            <span class="radio-text">Оплата наличными</span>
+                        </label>
+                    </div>
+                        <button type="submit" class="btn shop-button order__payment-method-btn">Разместить заказ</button>
+                    </div>
+                </div>
+
+
+                <div class="col-4 order__comment">
+                    <h3 class="order__comment-title">
+                        Комментарии
+                    </h3>
+                    <div class="form-field order__comment-field">
+                        <textarea name="comment" class="form-input" placeholder=" " required></textarea>
+                        <label class="form-label">Комментарий</label>
+                    </div>
                 </div>
             </div>
-        </div>
+        </form>
 
     </div>
 </section>
