--- a/shop/pages/templates/pages/about.html
+++ b/shop/pages/templates/pages/about.html
@@ -55,7 +55,7 @@
                 </div>
             </div>
             <div class="about__button">
-                <a href="shop.html" class="btn shop-button">Перейти в магазин</a>
+                <a href="{% url 'catalog:catalog' %}" class="btn shop-button">Перейти в магазин</a>
             </div>
         </div>
     </section>
