--- a/shop/templates/includes/footer.html
+++ b/shop/templates/includes/footer.html
@@ -21,10 +21,15 @@
                         <div class="footer__nav-shop">
                             <a class="footer__nav-link nav-link shop-page {% if request.resolver_match.url_name == 'catalog' or request.resolver_match.url_name == 'product_detail'%}active{% endif %}" href="{% url 'catalog:catalog' %}">Магазин</a>
                             <ul class="footer__nav-sublist">
-                                <li><a href="#" class ="footer__nav-sublink">Пальто</a></li>
-                                <li><a href="#" class ="footer__nav-sublink">Свитшоты</a></li>
-                                <li><a href="#" class ="footer__nav-sublink">Кардиганы</a></li>
-                                <li><a href="#" class ="footer__nav-sublink">Толстовки</a></li>
+                                {% for category in categories %}
+                                <li>
+                                    <a href="{% url 'catalog:catalog' %}?category={{ category.slug }}"
+                                    class="footer__nav-sublink {% if category.slug == current_category %}active{% endif %}">
+                                        {{ category.name }}
+
+                                    </a>
+                                </li>
+                                {% endfor %}
                             </ul>
                         </div>
                     </li>
