--- a/shop/pages/templates/pages/home.html
+++ b/shop/pages/templates/pages/home.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
+{% load thumbnail%}
 {% block title %}Главная страница{% endblock %}
 
 {% block content %}
@@ -76,43 +77,48 @@
 
             <h2 class="section-title">Новая коллекция</h2>
             <div class="row">
-                <div class="col-4 shop-item">
-                    <div class="shop-item__image-container">
-                        <a href="" class="shop-item__link shop-item__link--image">
-                            <img src="{% static 'img/shop_item1.png' %}" alt="Shop Item 1" class="shop-item__image img-fluid">
-                            <img src="{% static 'img/right_arrow.svg' %}" alt="Arrow" class="shop-item__arrow">
+                {% for product in new_products %}
+                {% with product.first_variant_list.0 as product_variant %}
+                    <div class="col-4 shop-item">
+                        <div class="shop-item__image-container">
+                            <a href="{% url 'catalog:product_detail' product.slug %}" class="shop-item__link shop-item__link--image">
+                                {% if product_variant.image %}
+                                {% thumbnail product_variant.image "1000x1500" as im %}
+                                    <img 
+                                        src="{{ im.url }}"
+                                        width="{{ im.width }}"
+                                        height="{{ im.height }}"
+                                        alt="{{ product.name }}" 
+                                        class="shop-item__image">
+                                {% endthumbnail %}
+                                {% else %}
+                                    <img 
+                                        src="{% static 'img/shop_item3.png' %}" 
+                                        alt="{{ product.name }}" 
+                                        class="shop-item__image">
+                                {% endif %}
+                                <img src="{% static 'img/right_arrow.svg' %}" alt="Arrow" class="shop-item__arrow">
+                            </a>
+                        </div>
+                        <a href="{% url 'catalog:product_detail' product.slug %}" class="shop-item__link shop-item__link--title">
+                            <h4 class="shop-item__title">{{ product.name }}</h4>
                         </a>
+                        <p class="shop-item__price {% if product_variant.price_with_discount %}sale-active{% endif %}">
+                            <span class="standard_price">
+                                ${{ product_variant.price }}
+                            </span>
+
+                            <span class="sale-price">
+                                {% if product_variant.price_with_discount %}
+                                    ${{ product_variant.price_with_discount }}
+                                {% else %}
+                                    ${{ product_variant.price }}
+                                {% endif %}
+                            </span>
+                        </p>
                     </div>
-                    <a href="" class="shop-item__link shop-item__link--title">
-                        <h4 class="shop-item__title">Футболка USA</h4>
-                    </a>
-                    <p class="shop-item__price sale-active"> <span class="standard_price">$229</span> <span class="sale_price">$129</span></p>
-                </div>
-                <div class="col-4 shop-item">
-                    <div class="shop-item__image-container">
-                        <a href="" class="shop-item__link shop-item__link--image">
-                            <img src="{% static 'img/shop_item2.png' %}" alt="Shop Item 2" class="shop-item__image img-fluid">
-                            <img src="{% static 'img/right_arrow.svg' %}" alt="Arrow" class="shop-item__arrow">
-                        </a>
-                    </div>
-                    <a href="" class="shop-item__link shop-item__link--title">
-                        <h4 class="shop-item__title">Купальник Glow</h4>
-                    </a>
-                    <p class="shop-item__price sale-active"> <span class="standard_price">$129</span> <span class="sale_price">$129</span></p>
-                </div>
-                <div class="col-4 shop-item">
-                    <div class="shop-item__image-container">
-                        <a href="" class="shop-item__link shop-item__link--image">
-                            <img src="{% static 'img/shop_item3.png' %}" alt="Shop Item 3" class="shop-item__image img-fluid">
-                            <img src="{% static 'img/right_arrow.svg' %}" alt="Arrow" class="shop-item__arrow">
-                        </a>
-                    </div>
-                    <a href="" class="shop-item__link shop-item__link--title">
-                        <h4 class="shop-item__title">Свитшот Sweet Shot</h4>
-                    </a>
-                    <p class="shop-item__price sale-active"> <span class="standard_price">$129</span> <span class="sale_price">$129</span></p>
-                </div>     
-             
+                {% endwith %}
+                {% endfor %}
             </div>
             
 
