feat: Update link to brand information on the home page

--- a/shop/pages/templates/pages/home.html
+++ b/shop/pages/templates/pages/home.html
@@ -206,7 +206,7 @@
             <h3 class="dream-team__subtitle">Для каждой</h3>
             <p class="dream-team__text">Каждая девушка уникальна. Однако, мы схожи в миллионе мелочей.</p>
             <p class="dream-team__text">Womazing ищет эти мелочи и создает прекрасные вещи, которые выгодно подчеркивают достоинства каждой девушки.</p>
-            <a href="#" class="dream-team__about-link">Подробнее о бренде</a>
+            <a href="{% url 'pages:about' %}" class="dream-team__about-link">Подробнее о бренде</a>
         </div>
         
         </div>
